--- a/app/src/main/res/layout/dialog_edit_alarm.xml
+++ b/app/src/main/res/layout/dialog_edit_alarm.xml
@@ -91,5 +91,45 @@
             android:textCursorDrawable="@null"
             android:textSize="@dimen/normal_text_size"/>
 
+        <RelativeLayout
+            android:id="@+id/edit_send_broadcast_before_alarm_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edit_alarm_label"
+            android:background="?attr/selectableItemBackground"
+            android:paddingLeft="@dimen/tiny_margin"
+            android:paddingTop="@dimen/normal_margin"
+            android:paddingBottom="@dimen/normal_margin">
+
+            <Button
+                android:id="@+id/button_add_child_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/normal_margin"
+                android:text="@string/broadcast_before_alarm"
+                android:visibility="visible" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/edit_send_broadcast_before_alarm_holder"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:showIn="@layout/activity_main"
+            android:id="@+id/rc_holder_child_alarms"
+            tools:context=".MainActivity">
+
+            <android.support.v7.widget.RecyclerView
+                android:visibility="visible"
+                android:id="@+id/rc_child_alarms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical" />
+
+        </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
