--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -29,6 +29,21 @@
             tools:text="07:00"/>
 
         <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/alarm_children"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/alarm_time"
+            android:layout_toEndOf="@+id/alarm_time"
+            android:layout_toRightOf="@+id/alarm_time"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:paddingLeft="@dimen/normal_margin"
+            android:textSize="@dimen/big_text_size"
+            tools:text="Has silent alarms"
+            tools:textSize="@dimen/big_text_size" />
+
+        <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/alarm_days"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
