--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/stopwatch_sorting_indicator_2"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"/>
 
