--- a/app/src/main/res/layout/item_child_alarm.xml
+++ b/app/src/main/res/layout/item_child_alarm.xml
@@ -16,35 +16,26 @@
                 android:layout_height="match_parent"
                 android:id="@+id/item_holder">
 
-                <com.simplemobiletools.commons.views.MySeekBar
-                    android:id="@+id/seekbar_alarm_offset"
-                    android:layout_width="185dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:background="?attr/selectableItemBackground"
-                    android:contentDescription="ring_before_minutes"
-                    android:max="180"
-                    android:progress="0" />
-
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/tv_child_alarm_info"
-                    android:layout_width="112dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="187dp"
-                    android:layout_marginLeft="187dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:layout_toStartOf="@+id/ib_delete_child_alarm"
-                    android:layout_toLeftOf="@+id/ib_delete_child_alarm"
+                    android:layout_toLeftOf="@+id/switch_toggle_silent_alarm"
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="07:00"
                     android:textSize="@dimen/alarm_text_size" />
+
+
+                <com.simplemobiletools.commons.views.MySwitchCompat
+                    android:id="@+id/switch_toggle_silent_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/ib_delete_child_alarm"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="12dp" />
 
                 <ImageButton
                     android:id="@+id/ib_delete_child_alarm"
