--- a/app/src/main/res/layout/item_child_alarm.xml
+++ b/app/src/main/res/layout/item_child_alarm.xml
@@ -49,7 +49,7 @@
                     android:layout_marginEnd="1dp"
                     android:layout_marginRight="1dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_delete" />
+                    app:srcCompat="@drawable/ic_delete_vector" />
 
     </RelativeLayout>
 
