--- a/app/src/main/res/layout/item_child_alarm.xml
+++ b/app/src/main/res/layout/item_child_alarm.xml
@@ -21,13 +21,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/switch_toggle_silent_alarm"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@+id/tv_child_alarm_id"
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="07:00"
-                    android:textSize="@dimen/alarm_text_size" />
+                    android:textSize="@dimen/middle_text_size" />
 
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/tv_child_alarm_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_toLeftOf="@+id/switch_toggle_silent_alarm"
+                    android:includeFontPadding="false"
+                    android:maxLines="1"
+                    android:text=""
+                    android:layout_marginRight="20dp"
+                    android:textSize="@dimen/middle_text_size" />
 
                 <com.simplemobiletools.commons.views.MySwitchCompat
                     android:id="@+id/switch_toggle_silent_alarm"
