--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,25 +20,31 @@
             android:id="@+id/tab_clock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_clock_vector"/>
+            android:icon="@drawable/ic_clock_vector" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_alarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_alarm_vector"/>
+            android:icon="@drawable/ic_alarm_vector" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_stopwatch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_stopwatch_vector"/>
+            android:icon="@drawable/ic_stopwatch_vector" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_timer"/>
+            android:icon="@drawable/ic_timer" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_timer" />
     </com.google.android.material.tabs.TabLayout>
 
     <com.duolingo.open.rtlviewpager.RtlViewPager
